versioned_docs/version-5.2/client-api/operations/maintenance/indexes/stop-index.mdx
---
title: "Pause Index Operation"
hide_table_of_contents: true
sidebar_label: Pause Index
sidebar_position: 8
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Pause Index Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `StopIndexOperation` to __pause a single index__ in the database.

* To pause indexing for ALL indexes in the database use the [pause indexing operation](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx).

* In this page:
    * [Overview](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#overview)
    * [Pause index example](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#pause-index-example)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#syntax)

</Admonition>
## Overview

<Admonition type="note" title="Note">

__On which node the index is paused__:

* When pausing the index from the __client__:  
  The index will be paused on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.

* When pausing the index from the __Studio__ (from the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)):  
  The index will be paused on the local node the browser is opened on, even if it is Not the preferred node.

</Admonition>

<Admonition type="note" title="Note">

__When index is paused on a node__:

* No indexing will be done by the paused index on the node where index was paused.  
  However, new data will be indexed by the index on other database-group nodes where it was not paused.

* You can query the index,  
  but results may be stale when querying the node where the index is paused.

</Admonition>

<Admonition type="note" title="Note">

__How to resume the index__:

* To resume the index from the client - see [resume index](../../../../client-api/operations/maintenance/indexes/start-index.mdx).

* To resume the index from the Studio - go to the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions).

* Pausing the index is __Not a persistent operation__.  
  This means the paused index will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling the database state).  
      Toggling the database state can be done from [database list view](../../../../studio/database/databases-list-view.mdx#database-actions) in Studio,  
      or from the client by sending the [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx).

* [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a paused index will resume the normal operation of the index  
  on the local node where the reset action was performed.

* Modifying the index definition will resume the normal operation of the index  
  on all nodes where it is paused.

</Admonition>



## Pause index example

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the pause index operation, pass the index name 
var pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node
        
// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
var indexingStatus = store.Maintenance.Send(new GetIndexingStatusOperation());

var index = indexingStatus.Indexes.FirstOrDefault(x => x.Name == "Orders/Totals");
Assert.Equal(IndexRunningStatus.Paused, index.Status);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the pause index operation, pass the index name 
var pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node
        
// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
var indexingStatus = await store.Maintenance.SendAsync(new GetIndexingStatusOperation());

var index = indexingStatus.Indexes.FirstOrDefault(x => x.Name == "Orders/Totals");
Assert.Equal(IndexRunningStatus.Paused, index.Status);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
public StopIndexOperation(string indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **indexName** | string | Name of an index to pause |




</LanguageContent>
<LanguageContent language="java">


The **StopIndexOperation** is used to pause indexing of a single index. 

<Admonition type="note" title="Note">
Indexing will be resumed automatically after server restart.
</Admonition>

### Syntax

<TabItem value="stop_1" label="stop_1">
<CodeBlock language="java">
{`public StopIndexOperation(String indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexName** | String | name of an index to stop indexing |

### Example

<TabItem value="stop_2" label="stop_2">
<CodeBlock language="java">
{`store.maintenance().send(new StopIndexOperation("Orders/Totals"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use `StopIndexOperation` to __pause a single index__ in the database.

* To pause indexing for ALL indexes in the database use the [pause indexing operation](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx).

* In this page:
    * [Overview](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#overview)
    * [Pause index example](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#pause-index-example)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#syntax)

</Admonition>
## Overview

<Admonition type="note" title="Note">

__On which node the index is paused__:

* When pausing the index from the __client__:  
  The index will be paused on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.

* When pausing the index from the __Studio__ (from the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)):  
  The index will be paused on the local node the browser is opened on, even if it is Not the preferred node.

</Admonition>

<Admonition type="note" title="Note">

__When index is paused on a node__:

* No indexing will be done by the paused index on the node where index was paused.  
  However, new data will be indexed by the index on other database-group nodes where it was not paused.

* You can query the index,  
  but results may be stale when querying the node where the index is paused.

</Admonition>

<Admonition type="note" title="Note">

__How to resume the index__:

* To resume the index from the client - see [resume index](../../../../client-api/operations/maintenance/indexes/start-index.mdx).

* To resume the index from the Studio - go to the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions).

* Pausing the index is __Not a persistent operation__.  
  This means the paused index will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling the database state).  
      Toggling the database state can be done from [database list view](../../../../studio/database/databases-list-view.mdx#database-actions) in Studio,  
      or from the client by sending the [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx).

* [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a paused index will also resume the normal operation of the index  
  on the local node where the reset action was performed.  

* Modifying the index definition will resume the normal operation of the index  
  on all nodes where it is paused.

</Admonition>



## Pause index example

<TabItem value="pause_index" label="pause_index">
<CodeBlock language="js">
{`// Define the pause index operation, pass the index name 
const pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to maintenance.send
await store.maintenance.send(pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node

// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
const indexingStatus = await store.maintenance.send(new GetIndexingStatusOperation());

const index = indexingStatus.indexes.find(x => x.name === "Orders/Totals")
assert.strictEqual(index.status, "Paused");
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
const pauseIndexOp = new StopIndexOperation(indexName);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **indexName** | string | Name of an index to pause |




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [How to Disable Index](../../../../client-api/operations/maintenance/indexes/disable-index)
- [How to Resume Index](../../../../client-api/operations/maintenance/indexes/start-index)
- [Pause indexing on database.](../../../../client-api/operations/maintenance/indexes/stop-indexing)
- [How to Enable Index](../../../../client-api/operations/maintenance/indexes/enable-index)
- [How to Stop Index Until Restart](../../../../client-api/operations/maintenance/indexes/stop-index)

### Studio
- [Pause index from Studio](../../../../studio/database/indexes/indexes-list-view#indexes-list-view---actions)
- [Pause indexing from Studio](../../../../studio/database/databases-list-view#more-actions)


-->