versioned_docs/version-5.4/client-api/operations/maintenance/indexes/stop-index.mdx
---
title: "Pause Index Operation"
hide_table_of_contents: true
sidebar_label: Pause Index
sidebar_position: 8
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Pause Index Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `StopIndexOperation` to **pause a single index** in the database.

* To pause indexing for ALL indexes in the database use [StopIndexingOperation](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx).

* In this page:
    * [Overview](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#overview)
    * [Pause index example](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#pause-index-example)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#syntax)

</Admonition>
## Overview

#### Which node is the index paused for?

* When pausing the index from the **client**:  
  The index will be paused for the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, 
  Not for all database-group nodes.

* When pausing the index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be paused for the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when an index is paused for a node?

* A paused index performs no indexing for the node it is paused for.  
  New data **is** indexed by the index on database-group nodes that the index is not paused for.

* A paused index **can** be queried, but results may be stale when querying the node that the index is paused for.
#### Resuming the index:

* Learn how to resume an index by a client here: [Resume index](../../../../client-api/operations/maintenance/indexes/start-index.mdx)  

* Learn to resume an index from **Studio** here: [Indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  

* Pausing the index is **Not a persistent operation**.  
  This means the paused index will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.

* [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a paused index will resume the normal operation of the index  
  on the local node where the reset action was performed.

* Modifying the index definition will resume the normal operation of the index  
  on all the nodes for which it is paused.



## Pause index example

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the pause index operation, pass the index name 
var pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node
        
// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
var indexingStatus = store.Maintenance.Send(new GetIndexingStatusOperation());

var index = indexingStatus.Indexes.FirstOrDefault(x => x.Name == "Orders/Totals");
Assert.Equal(IndexRunningStatus.Paused, index.Status);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the pause index operation, pass the index name 
var pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node
        
// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
var indexingStatus = await store.Maintenance.SendAsync(new GetIndexingStatusOperation());

var index = indexingStatus.Indexes.FirstOrDefault(x => x.Name == "Orders/Totals");
Assert.Equal(IndexRunningStatus.Paused, index.Status);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
public StopIndexOperation(string indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **indexName** | string | Name of an index to pause |




</LanguageContent>
<LanguageContent language="java">


The **StopIndexOperation** is used to pause indexing of a single index. 

<Admonition type="note" title="Note">
Indexing will be resumed automatically after server restart.
</Admonition>

### Syntax

<TabItem value="stop_1" label="stop_1">
<CodeBlock language="java">
{`public StopIndexOperation(String indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexName** | String | name of an index to stop indexing |

### Example

<TabItem value="stop_2" label="stop_2">
<CodeBlock language="java">
{`store.maintenance().send(new StopIndexOperation("Orders/Totals"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* Use `StopIndexOperation` to **pause a single index** in the database.

* To pause indexing for ALL indexes in the database use [StopIndexingOperation](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx).

* In this page:
    * [Overview](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#overview)
    * [Pause index example](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#pause-index-example)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#syntax)

</Admonition>
## Overview

#### Which node is the index paused for?

* When pausing the index from the **client**:  
  The index will be paused for the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, 
  Not for all database-group nodes.

* When pausing the index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be paused for the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when an index is paused for a node?

* A paused index performs no indexing for the node it is paused for.  
  New data **is** indexed by the index on database-group nodes that the index is not paused for.

* A paused index **can** be queried, but results may be stale when querying the node that the index is paused for.
#### Resuming the index:

* Learn how to resume an index by a client here: [Resume index](../../../../client-api/operations/maintenance/indexes/start-index.mdx)  

* Learn to resume an index from **Studio** here: [Indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  

* Pausing the index is **Not a persistent operation**.  
  This means the paused index will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.

* [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a paused index will resume the normal operation of the index  
  on the local node where the reset action was performed.

* Modifying the index definition will resume the normal operation of the index  
  on all the nodes for which it is paused.



## Pause index example

<TabItem value="pause_index" label="pause_index">
<CodeBlock language="python">
{`# Define the resume index operation, pass the index name
pause_index_op = StopIndexOperation("Orders/Totals")

# Execute the operation by passing it to maintenance.send
store.maintenance.send(pause_index_op)

# At this point:
# Index 'Orders/Totals' is paused on the preferred node

# Can verify the index status on the preferred node by sending GetIndexingStatusOperation
indexing_status = store.maintenance.send(GetIndexingStatusOperation())

index = [x for x in indexing_status.indexes if x.name == "Orders/Totals"][0]
self.assertEqual(index.status, IndexRunningStatus.PAUSED)
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="python">
{`class StopIndexOperation(VoidMaintenanceOperation):
    # class name has "Stop", but this is ok, this is the "Pause" operation
    def __init__(self, index_name: str): ...
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **index_name** | `str` | Name of an index to pause |




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* Use `StopIndexOperation` to **pause a single index** in the database.

* To pause indexing for ALL indexes in the database use [StopIndexingOperation](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx).

* In this page:
    * [Overview](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#overview)
    * [Pause index example](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#pause-index-example)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#syntax)

</Admonition>
## Overview

#### Which node is the index paused for?

* When pausing the index from the **client**:  
  The index will be paused for the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, 
  Not for all database-group nodes.

* When pausing the index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be paused for the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when an index is paused for a node?

* A paused index performs no indexing for the node it is paused for.  
  New data **is** indexed by the index on database-group nodes that the index is not paused for.

* A paused index **can** be queried, but results may be stale when querying the node that the index is paused for.
#### Resuming the index:

* Learn how to resume an index by a client here: [Resume index](../../../../client-api/operations/maintenance/indexes/start-index.mdx)  

* Learn to resume an index from **Studio** here: [Indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  

* Pausing the index is **Not a persistent operation**.  
  This means the paused index will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.

* [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a paused index will resume the normal operation of the index  
  on the local node where the reset action was performed.

* Modifying the index definition will resume the normal operation of the index  
  on all the nodes for which it is paused.



## Pause index example

<TabItem value="pause_index" label="pause_index">
<CodeBlock language="php">
{`// Define the pause index operation, pass the index name
$pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node

// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
/** @var IndexingStatus $indexingStatus */
$indexingStatus = $store->maintenance()->send(new GetIndexingStatusOperation());

$indexes = array_filter($indexingStatus->getIndexes()->getArrayCopy(), function ($v, $k) \{
    return $v->getName() == "Orders/Totals";
\});
/** @var IndexingStatus $index */
$index = $indexes[0];

$this->assertTrue($index->getStatus()->isRunning());
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="php">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
public StopIndexOperation(?string $indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **$indexName** | `?string` | Name of an index to pause |




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use `StopIndexOperation` to **pause a single index** in the database.

* To pause indexing for ALL indexes in the database use [StopIndexingOperation](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx).

* In this page:
    * [Overview](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#overview)
    * [Pause index example](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#pause-index-example)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-index.mdx#syntax)

</Admonition>
## Overview

#### Which node is the index paused for?

* When pausing the index from the **client**:  
  The index will be paused for the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, 
  Not for all database-group nodes.

* When pausing the index from the **Studio** [indexes list](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) view:  
  The index will be paused for the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when an index is paused for a node?

* A paused index performs no indexing for the node it is paused for.  
  New data **is** indexed by the index on database-group nodes that the index is not paused for.

* A paused index **can** be queried, but results may be stale when querying the node that the index is paused for.
#### Resuming the index:

* Learn how to resume an index by a client here: [Resume index](../../../../client-api/operations/maintenance/indexes/start-index.mdx)  

* Learn to resume an index from **Studio** here: [Indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions)  

* Pausing the index is **Not a persistent operation**.  
  This means the paused index will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.

* [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a paused index will resume the normal operation of the index  
  on the local node where the reset action was performed.

* Modifying the index definition will resume the normal operation of the index  
  on all the nodes for which it is paused.



## Pause index example

<TabItem value="pause_index" label="pause_index">
<CodeBlock language="js">
{`// Define the pause index operation, pass the index name 
const pauseIndexOp = new StopIndexOperation("Orders/Totals");

// Execute the operation by passing it to maintenance.send
await store.maintenance.send(pauseIndexOp);

// At this point:
// Index 'Orders/Totals' is paused on the preferred node

// Can verify the index status on the preferred node by sending GetIndexingStatusOperation
const indexingStatus = await store.maintenance.send(new GetIndexingStatusOperation());

const index = indexingStatus.indexes.find(x => x.name === "Orders/Totals")
assert.strictEqual(index.status, "Paused");
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
const pauseIndexOp = new StopIndexOperation(indexName);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **indexName** | string | Name of an index to pause |




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [How to Disable Index](../../../../client-api/operations/maintenance/indexes/disable-index)
- [How to Resume Index](../../../../client-api/operations/maintenance/indexes/start-index)
- [Pause indexing on database.](../../../../client-api/operations/maintenance/indexes/stop-indexing)
- [How to Enable Index](../../../../client-api/operations/maintenance/indexes/enable-index)
- [How to Stop Index Until Restart](../../../../client-api/operations/maintenance/indexes/stop-index)

### Studio
- [Pause index from Studio](../../../../studio/database/indexes/indexes-list-view#indexes-list-view---actions)
- [Pause indexing from Studio](../../../../studio/database/databases-list-view#more-actions)


-->